Fixed image packaging for dev build

--- a/ClubManager/ClubManager.csproj
+++ b/ClubManager/ClubManager.csproj
@@ -17,9 +17,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ContentWithTargetPath Include="..\images\icon.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <TargetPath>\images\icon.png</TargetPath>
-    </ContentWithTargetPath>
+    <Content Include="..\images\icon.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
