--- a/ClubManager/DalamudPackager.targets
+++ b/ClubManager/DalamudPackager.targets
@@ -6,6 +6,7 @@
           OutputPath="$(OutputPath)" 
           AssemblyName="$(AssemblyName)" 
           MakeZip="true"
+          ManifestType="json"
           VersionComponents="3"
           />
     </Target>
