Added doorbell sound and config for it

--- a/ClubManager/ClubManager.csproj
+++ b/ClubManager/ClubManager.csproj
@@ -20,5 +20,15 @@
     <Content Include="..\images\icon.png">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="..\sounds\doorbell_home.wav">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\sounds\reception_bell.wav">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="NAudio" Version="1.10.0" />
   </ItemGroup>
 </Project>
