Renamed app to VenueManager

--- a/VenueManager/VenueManager.csproj
+++ b/VenueManager/VenueManager.csproj
@@ -6,13 +6,13 @@
     <Authors>Jrogo</Authors>
     <Company></Company>
     <Version>0.8.0</Version>
-    <Description>Guest list and doorbell for your club</Description>
+    <Description>Guest list and doorbell for your venue</Description>
     <Copyright></Copyright>
-    <PackageProjectUrl>https://github.com/Jrogo7/ClubManager</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/Jrogo7/VenueManager</PackageProjectUrl>
     <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
     <IsPackable>false</IsPackable>
-    <Title>ClubManager</Title>
-    <RepositoryUrl>https://github.com/Jrogo7/ClubManager</RepositoryUrl>
+    <Title>VenueManager</Title>
+    <RepositoryUrl>https://github.com/Jrogo7/VenueManager</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
