--- a/VenueManager/VenueManager.csproj
+++ b/VenueManager/VenueManager.csproj
@@ -56,4 +56,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="DalamudPackager" Version="13.0.0" />
+  </ItemGroup>
 </Project>
